--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,57 @@
+body {
+    margin: auto;
+    width:1500px;
+    height:0 auto;
+    min-height: 1500px;
+    position: relative;
+    margin-bottom: 90px;
+    background-color: rgb(150, 148, 148);
+}
+h1 {
+    padding: 10px;
+    padding-top: 30px;
+    font-size: 40px;
+    margin-top: 100px;
+    margin-bottom: 20px;
+    margin-left: 100px;
+    color: whitesmoke;
+}
+header {
+    background-color: rgb(73, 72, 72);
+    margin-top: 2%;
+    width: 100% 100%;
+    height: 200px;
+    margin-bottom: 30px;
+}
+header img {
+    margin-top: 30px;
+    float: left;
+    margin-top: 15px;
+    margin-left: 100px;
+    border-radius: 5%;
+    
+}
+nav {
+    margin-bottom: 50px;
+    display: block;
+    line-height: 50px;
+}
+ul {
+text-align: center;
+}
+li {
+    display: inline-block;
+    margin-right: 100px;
+    margin-top: 25px;
+    margin-bottom: 10px;
+    color: whitesmoke;
+    font-size: 25px;
+    
+}
+li a {
+    text-decoration: none;
+    color: gray;
+}
 #table th{
     padding: 10px;
     text-align: center;
@@ -7,9 +61,7 @@ footer {
     padding: 5px;
     position: fixed;
     width : 99%;
-
     bottom: 0px ;
-    background-color: black;
     color : white;
     border-top: 1px solid gray;
 }
@@ -28,6 +80,7 @@ body p {
 #form {
     margin: 10px;
     font-family: 'Times New Roman', Times, serif;
+    margin-bottom: 50px;
 }
 
 label {
